# leap_mujoco

./: .gitignore  README.md  hello.py  pyproject.toml
envs/: LeapGrasp.py  leap_grasp.py
model/: leap_grasp_ball.xml  robot.mjfl  robot.mujoco.xml  robot.urdf  robot.xml  robot_assets.xml
model/meshes/: middle_phalanx_collision.stl  palm_lower_collision.stl  proximal_phalanx_1_collision.stl  proximal_phalanx_2_collision.blend  thumb_distal_phalanx_collision.blend1  thumb_semi_palm_collision.stl
model/resources/meshes/: distal_phalanx_collision.blend  distal_phalanx_collision.stl  middle_phalanx.blend  middle_phalanx.blend1  middle_phalanx_collision.blend  middle_phalanx_collision.stl  palm_lower_collision.blend  proximal_phalanx_1_collision.blend  proximal_phalanx_1_connection_collision.stl  proximal_phalanx_1_motor_collision.stl  proximal_phalanx_2_collision.stl  thumb_distal_phalanx_collision.blend  thumb_distal_phalanx_collision.stl  thumb_middle_phalanx_collision.blend  thumb_middle_phalanx_collision.stl  thumb_semi_palm_collision.blend
model/resources/objects/: start_pos.yaml
model/resources/objects/banana/: assets.xml  body.xml
model/resources/objects/bowl/: assets.xml  body.xml
model/resources/objects/bowl/meshes/: textured_centered.mtl
model/resources/objects/can/: assets.xml  body.xml
model/resources/objects/fork/: assets.xml  body.xml
model/resources/objects/mug/: assets.xml  body.xml
model/resources/objects/sphere/: body.xml
scripts/: learn_sac.py  test.py  test_env.py  test_mujoco_xml.py  test_sac.py
(+17 files in other folders)
