[project]
name = "leap-mujoco"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium>=1.2.3",
    "gymnasium-robotics>=1.4.2",
    "mujoco>=3.4.0",
    "mujoco-py>=2.1.2.14",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "stable-baselines3>=2.7.1",
    "tensorboard>=2.20.0",
]
